edited tables c3 and c4

--- a/output/combined_predict_ready.tex
+++ b/output/combined_predict_ready.tex
@@ -1,21 +1,20 @@
-\begin{tabular}{lcccccc} \toprule
- & (1) & (2) & (3) & (4) & (5) & (6) \\
-Group Matched   & Control & Treatment & Control & Treatment  & Control & Treatment \\ 
-Auxiliary Sample & \multicolumn{2}{c}{CNLSY} & \multicolumn{2}{c}{NLSY79}  & \multicolumn{2}{c}{PSID} \\  \midrule 
-Male & 3,999.07*** & 3,911.59*** & 2,633.17*** & 2,616.23*** & 7,087.28*** & 7,096.48*** \\
- & (1,264.39) & (1,211.81) & (401.89) & (378.45) & (888.77) & (891.09) \\
-Black & -3,366.02*** & -3,175.47*** & -1,236.27*** & -1,236.89*** & -1,900.33*** & -1,926.12*** \\
- & (1,149.44) & (1,128.24) & (330.86) & (307.09) & (489.68) & (493.72) \\
-PIAT (5-7) & 83.87 & 79.94 &  &  &  &  \\
- & (60.09) & (57.83) &  &  &  &  \\
-Education (30) & 2,274.99*** & 2,224.96*** & 845.98*** & 833.57*** & 1,813.90*** & 1,824.82*** \\
- & (410.42) & (394.57) & (132.05) & (121.78) & (195.01) & (196.46) \\
-Labor Income (21) & 0.13** & 0.13** & 0.13** & 0.13** & 0.06* & 0.06* \\
- & (0.06) & (0.06) & (0.07) & (0.06) & (0.03) & (0.03) \\
-Lagged Labor Income  & 0.53*** & 0.55*** & 0.87*** & 0.88*** & 0.72*** & 0.72*** \\
- & (0.07) & (0.07) & (0.06) & (0.06) & (0.05) & (0.05) \\
-Constant & -25,579.06*** & -25,100.97*** & -8,339.73*** & -8,190.57*** & -16,127.27*** & -16,235.51*** \\
- & (6,453.86) & (6,262.12) & (1,354.43) & (1,249.59) & (1,968.18) & (1,982.72) \\ \\ \midrule
-Observations & 1,215 & 1,215 & 7,036 & 8,219 & 5,544 & 5,544 \\
-$R^2$  & 0.51 & 0.52 & 0.65 & 0.65 & 0.61 & 0.61 \\ \bottomrule
+\begin{tabular}{lccc} \toprule
+ & (1) & (2) & (3)  \\
+Auxiliary Sample & CNLSY & NLSY79  & PSID \\  \midrule 
+Male & 3,999.07*** &  2,633.17***  & 7,087.28***  \\
+ & (1,264.39)  & (401.89) & (888.77)  \\
+Black & -3,366.02*** & -1,236.27***  & -1,900.33*** \\
+ & (1,149.44)  & (330.86)& (489.68)  \\
+PIAT (5-7) & 83.87 &   &    \\
+ & (60.09)  &  &    \\
+Education (30) & 2,274.99***  & 845.98*** & 1,813.90***  \\
+ & (410.42) & (132.05)  & (195.01)  \\
+Labor Income (21) & 0.13**  & 0.13** & 0.06*  \\
+ & (0.06)  & (0.07)  & (0.03) \\
+Lagged Labor Income  & 0.53*** & 0.87*** & 0.72***  \\
+ & (0.07)  & (0.06)  & (0.05) \\
+Constant & -25,579.06***  & -8,339.73*** & -16,127.27***  \\
+ & (6,453.86) & (1,354.43) & (1,968.18)  \\ \\ \midrule
+Observations & 1,215 & 7,036 & 5,544  \\
+$R^2$  & 0.51 & 0.65 & 0.61  \\ \bottomrule
 \end{tabular}
