--- a/abc_comprehensivecba_answerstoreferees.tex
+++ b/abc_comprehensivecba_answerstoreferees.tex
@@ -83,11 +83,11 @@ University of Southern California}
 \noindent \textbf{This needs to be a lot clearer and a lot more convincing. You may be resolving this eventually in (3). It is unclear there, however, whether you want all the characteristics of the synthetic group to be the same or just for the one specific j, which you are seeking to forecast in (1). To me, it makes more sense that they are all the
 same (if possible: is it? Comment on that!).}
 
-\noindent \textit{Response.} We now thoroughly discuss this point in Section~\ref{section:cbamethodology}, where we detail the construction of our synthetic cohorts. As you point out, it makes more sense to construct one synthetic control group and one synthetic treatment group for doing the analysis across all of the outcomes. That is what we do.
+\noindent \textit{Response.} We now thoroughly discuss this point in Section~\ref{section:cbamethodology}, where we detail the construction of our synthetic cohorts. As you point out, it makes more sense to construct one synthetic cohort for doing the analysis across all of the outcomes. That is what we do.
 
 \noindent \textbf{Editor. Connected to that: I found assumption Assumption~\ref{ass:summary} on pg.\ 18 mystifying. It may actually be unfortunate that you ``suppress individual i subscripts'' to ``avoid notational clutter'', as you state on p. 16. I thought that the explanation on pg.\ 15 and (3) meant, that you take each individual of your actual sample and ``match him/her'' up with someone in the auxiliary sample, who has the exact same vector of characteristics Y until age a* (which then raises a bunch of questions: what, if there are many in the artificial data that do the trick? What, if there are none?). So, you then would have an auxiliary sample, that looks like your experimental sample, but where you can observe everything until the end of their lives. If that is what you do, then \ref{ass:summary} is not an assumption: it is a definition of the auxiliary sample.}
 
-\noindent \textit{Response.} We have rewritten Section~\ref{section:cbamethodology}. We apologize for the confusing exposition in the previous draft. Our procedure is now discussed in greater detail. We have removed old Assumption~\ref{ass:summary} in the previous version of the paper because it was not even necessary. We now note that in our main approach we do not match individual to individual across experimental and non-experimental samples. Instead, we construct synthetic treatment and control groups and estimate structural relationships. What matters is the structural relationships that we are able to identify and estimate in the non-experimental samples, but not the outcomes themselves. For this, Assumption~\ref{ass:summary} was confusing and we have restated all our assumptions in terms of these structural relationships. In a second approach, we match individuals.
+\noindent \textit{Response.} We have rewritten Section~\ref{section:cbamethodology}. We apologize for the confusing exposition in the previous draft. Our procedure is now discussed in greater detail. We have removed old Assumption~\ref{ass:summary} in the previous version of the paper because it was not even necessary. We now note that in our main approach we do not match individual to individual across experimental and non-experimental samples. Instead, we a synthetic cohort and estimate structural relationships. What matters is the structural relationships that we are able to identify and estimate in the non-experimental samples, but not the outcomes themselves. For this, Assumption~\ref{ass:summary} was confusing and we have restated all our assumptions in terms of these structural relationships. In a second approach, we match individuals.
 
 \noindent \textbf{And if that is not the definition, then exactly what is the definition? In any case, assumption A-2 on p.21 states some support condition. It would seem to me that this is a necessary condition to even construct the auxiliary sample, as defined by ``assumption''~\ref{ass:summary}. Perhaps you mean something else, but this should all be crystal clear. Moreover, the selection of variables is really key. Suppose you include cohort information in the regressors in (1): then, assumption A-2 would be impossible to satisfy. There is too much crucial information here, swept under the rug of apparently clean formalism.}
 
