--- a/heckman.bib
+++ b/heckman.bib
@@ -29547,6 +29547,19 @@ Welfare Reform Academy},
   Timestamp                = {2009.05.21}
 }
 
+@Article{Frolich_2005_Estimators_SC,
+  Title                    = {Matching Estimators and Optimal Bandwidth Choice},
+  Author                   = {Fr\"{o}lich, Markus},
+  Journal                  = {Statistics and Computing},
+  Year                     = {2005},
+  Number                   = {3},
+  Pages                    = {197--215},
+  Volume                   = {15},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2018.07.17}
+}
+
 @Unpublished{Fruhwirth-Schnatter_Lopes_2012_UNPUBParsBayes,
   Title                    = {Parsimonious {B}ayesian Factor Analysis When the Number of Factors Is Unknown},
   Author                   = {Fr\"{u}hwirth-Schnatter, Sylvia and Lopes, Hedibert Freitas},
@@ -33669,6 +33682,17 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Timestamp                = {2014.06.19}
 }
 
+@Article{Gorman_1980_RESTUD,
+  Title                    = {A possible procedure for analysing quality differentials in the egg market},
+  Author                   = {Gorman, W. M.},
+  Journal                  = {The Review of Economic Studies},
+  Year                     = {1980},
+  Pages                    = {843-856},
+
+  Owner                    = {Alexandra},
+  Timestamp                = {2014.07.22}
+}
+
 @Article{Gorman_1980_REStud,
   Title                    = {A Possible Procedure for Analysing Quality Differentials in the Egg Market},
   Author                   = {W. M. Gorman},
@@ -33681,17 +33705,6 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Volume                   = {47},
 
   Owner                    = {Lynn}
-}
-
-@Article{Gorman_1980_RESTUD,
-  Title                    = {A possible procedure for analysing quality differentials in the egg market},
-  Author                   = {Gorman, W. M.},
-  Journal                  = {The Review of Economic Studies},
-  Year                     = {1980},
-  Pages                    = {843-856},
-
-  Owner                    = {Alexandra},
-  Timestamp                = {2014.07.22}
 }
 
 @Article{Gorman_1965_RES,
