--- a/Appendices/Methodology_Alt.tex
+++ b/Appendices/Methodology_Alt.tex
@@ -59,7 +59,7 @@ When we do not observe data on an outcome for more than 10\% of the individuals 
 \noindent Let $Y^{r}$ represent outcome $Y$ when $R$ is fixed to take the value $r$. Based on Assumption~\ref{ass:attr}, we use IPW to identify $\mathbb{E}[Y^r]$ as follows:
 
 \begin{align} \label{eq:case2}
-\mathbb{E}[Y^r] &= \int \int y f_{Y|\bm{B} = b,R=r, A=1} (y | \bm{B} = b,R=r, A=1) f_{\bm{B}} (b) dydb
+\mathbb{E}[Y^r] &= \int \int y f_{Y|\bm{B} = b,R=r, A=1} (y | \bm{B} = b,R=r, A=1) f_{\bm{B}} (b|R=r) dydb
 \end{align}
 
 \noindent where each component of the last expression in \eqref{eq:case2} is straightforward to recover from the data. Using Bayes' Theorem, we can write an equivalent expression to make the IPW scheme explicit. That is, we apply Bayes' Theorem to $f_{\bm{B}} (b)$ to obtain
